# Reflex_fastapi_with_admin

./: .gitignore  README.md  pyproject.toml  rxconfig.py
Reflex_fastapi_with_admin/: Reflex_fastapi_with_admin.py
Reflex_fastapi_with_admin/DBViews/: Article.py  User.py
Reflex_fastapi_with_admin/api/: api.py
Reflex_fastapi_with_admin/configs/: config.py
Reflex_fastapi_with_admin/databases/: database.py  seed.py
Reflex_fastapi_with_admin/fixtures/: articles.py  users.py
Reflex_fastapi_with_admin/models/: Article.py  User.py
Reflex_fastapi_with_admin/utils/: Decoders.py  provider.py
